<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calendar Notifications NG</string>
    <string name="main_activity_title">Calendar Notifications</string>
    <string name="settings">Settings</string>
    <string name="application_has_no_access">This application needs special permissions to be able to access calendar notifications\n\nPlease grant READ_CALENDAR and WRITE_CALENDAR permissions\n\nWRITE_CALENDAR is required to hide original calendar notification</string>
    <string name="cancel">Cancel</string>
    <string name="on">Enabled</string>
    <string name="off">Disabled</string>
    <string name="empty" translatable="false" />
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_event">Dismiss event</string>
    <string name="snooze">Snooze</string>
    <string name="show_dismiss_button">Show \'Dismiss\' button</string>
    <string name="show_dismiss_summary">The \'Dismiss\' action will be displayed with each notification, notification then can only be dismissed with this button</string>
    <string name="play_reminder_sound">Notification sound</string>
    <string name="play_reminder_sound_summary">Enable to play notification sound</string>
    <string name="ringtone_selection">Notification Ringtone</string>
    <string name="ringtone_selection_summary">Choose ringtone for notification</string>
    <string name="vibra_on">Vibration</string>
    <string name="notification_light_summary">Use LED to notify about active notification</string>
    <string name="notification_light_title">Notification LED</string>
    <string name="help_feedback">Help and feedback</string>
    <string name="feedback">Feedback</string>
    <string name="help_title">If you found a bug, have a question or want to suggest a feature or give a feedback - please contact developer via email.\n\nPlease don\'t expect instant response. I\'m developing this application in my free time and can only respond when I have time for that</string>
    <string name="email_developer">EMAIL DEVELOPER</string>
    <string name="forward_to_pebble">Forward to Pebble</string>
    <string name="forward_to_pebble_summary">If you have Pebble Smart Watch - this will enable app to forward notifications to your Pebble</string>
    <string name="multiple_events">%d more events</string>
    <string name="multiple_events_details">Tap to see details</string>
    <string name="title_activity_activity_snooze">Snooze</string>
    <string name="empty_title">(No title)</string>
    <string name="snooze_event_for">Snooze event for:</string>
    <string name="snooze_preset_15_min">15 minutes</string>
    <string name="snooze_preset_1_hour">1 hour</string>
    <string name="snooze_preset_4_hours">4 hours</string>
    <string name="snooze_preset_1_day">1 day</string>
    <string name="location">Location:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="change_event_time">Change event time</string>
    <string name="change_event_time_repeating_event">Change event time (creates event copy for repeating events)</string>
    <string name="one_hour_from_now">Move next hour</string>
    <string name="same_time_tomorrow">Move next day</string>
    <string name="next_week_same_day">Move next week</string>
    <string name="move_four_weeks">Move by 4 weeks</string>
    <string name="custom_pick_a_date">Custom (pick a date)</string>
    <string name="title_activity_activity_test_buttons_and_to_do" translatable="false">ActivityTestButtonsAndToDo</string>
    <string name="snoozed_until_string">Snoozed until </string>
    <string name="card_view_btn_change">CHANGE</string>
    <string name="card_view_btn_snooze">SNOOZE</string>
    <string name="card_view_btn_dismiss">DISMISS</string>
    <string name="new_events_detected">Reload to see new events</string>
    <string name="button_reload">RELOAD</string>
    <string name="settings_name">Settings</string>
    <string name="credits_icon_author" translatable="false">Cornmanthe 3rd</string>
    <string name="app_icon_credit">Icon credit:</string>
    <string name="kotlin_language" translatable="false">Kotlin Language</string>
    <string name="app_created_with">Created with</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="snooze_presets">Snooze settings</string>
    <string name="smartwatch_support">Smartwatch support</string>
    <string name="error_cannot_parse_preset">Sorry, cannot parse your input</string>
    <string name="snooze_presets_title">Snooze Presets</string>
    <string name="snooze_presets_summary">Here you can change default snooze presets</string>
    <string name="error_too_many_presets">Only up to 6 presets are supported, extra presets would be ignored</string>
    <string name="now">now</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="no_events_to_display">No event notifications to display\nActive and snoozed notifications would appear here</string>
    <string name="no_calendar_permissions_main">Application has no calendar permissions</string>
    <string name="view_after_edit">View after edit</string>
    <string name="view_after_edit_summary">Enable to automatically view event in the calendar after changing event time using Snooze activity</string>
    <string name="misc_settings">Misc settings</string>
    <string name="abort_broadcast">Abort broadcast</string>
    <string name="abort_broadcast_summary">Select this if you are seeing notifications from calendar along with notifications from this app</string>
    <string name="enable_reminders">Enable reminders</string>
    <string name="enable_reminders_summary">If enabled, app would repeatedly remind about active notifications</string>
    <string name="remind_interval">Remind interval</string>
    <string name="invalid_reminder_interval">Reminder interval cannot be zero, reverted to 1 minute</string>
    <string name="max_reminders">Max reminders</string>
    <string name="max_reminders_summary">Maximum number of reminders to fire, 0 for indefinite</string>
    <string name="pebble_notification_title">Calendar</string>
    <string name="projectPageOnGitHub">Project page on GitHub</string>
    <string name="snooze_all">Snooze All</string>
    <string name="change_all">Change All</string>
    <string name="snooze_all_confirmation">Snooze ALL events?\nAlready snoozed would also change snooze time unless snoozed to longer period</string>
    <string name="change_all_notification">This will change snooze time for all events\nContinue?</string>
    <string name="snooze_all_events">Snooze all events to:</string>
    <string name="change_all_events">Change snooze time for all events:</string>
    <string name="change_snooze_to">Change snooze to:</string>
    <string name="snooze_all_title">Snooze all events</string>
    <string name="change_all_title">Change all events</string>
    <string name="led_color">LED Color</string>
    <string name="error_cannot_parse_pattern">Cannot parse this pattern</string>
    <string name="quiet_time_from">Quiet time from</string>
    <string name="quiet_time_to">Quiet time to</string>
    <string name="enable_quiet_time">Enable quiet time</string>
    <string name="reminders_section">Reminders</string>
    <string name="quiet_hours_section">Quiet hours settings</string>
    <string name="quiet_hours">Quiet hours</string>
    <string name="snoozed_time_inside_quiet_hours" formatted="false">NOTE: Next snooze reminder hits quiet time period, no sound or vibration would be played until end of period on %s</string>
    <string name="quiet_hours_summary">Use quiet time to mute all reminders and snoozed event during certain period of time, primary events notifications would still play sound and vibrate (according to settings)</string>
    <string name="quiet_hours_mute_primary">Mute primary notifications</string>
    <string name="quiet_hours_mute_primary_summary">Mute primary notifications during quiet time, so app becomes completely silent. Primary notification is a very first notification for particular event</string>
    <string name="quiet_hours_main_activity_status" formatted="false">Quiet hours period is active\nNo reminders until %s</string>
    <string name="hits_quiet_period">(hits quiet period)</string>
    <string name="custom_snooze_entry">Custom</string>
    <string name="for_a_custom_time">For a custom period</string>
    <string name="until_specific_time">Until specific time and date</string>
    <string name="snooze_for">Snooze for:</string>
    <string name="selected_time_is_in_the_past"><b>Can\'t snooze:</b><br>selected time is in the past</br></string>
    <string name="snooze_until_string">Snooze until date / time:</string>
    <string name="custom_snooze_options_title">Custom snooze options</string>
    <string name="custom_snooze_options_summary">Show custom snooze options on the snooze activity</string>
    <string-array name="time_units_plurals">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string-array name="time_units_plurals_with_seconds">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string name="pebble_event_text_in_the_title">Event text in the title</string>
    <string name="pebble_event_text_in_the_title_summary">Useful for old pebble firmwares</string>
    <string name="title_calendars_activity">Handled Calendars</string>
    <string name="power_optimisation_warning"><b>Important information for Samsung users:</b>\n\nOn many recent devices Samsung have implemented app power optimisation\nIf this optimisation is enabled for Calendar Notifications NG, event reminders might fire with some delay from expected reminder time\n\nThere is no way for app to check if it is optimized or not so it is recommended to check it manually\n\nDisabling power optimisation for this app would not cause any battery drain\n\nPlease open\nSettings -&gt; Battery -&gt; App power saving details -&gt; Find "Calendar Notifications Plus"\nand set it to \'Disabled\'\n\nThis information does not apply if you are using custom non-TouchWiz based ROM</string>
    <string name="never_show_again">Don\'t show again</string>
    <string name="app_behavior">Behavior</string>
    <string name="use_alarm_stream">Use Alarm volume</string>
    <string name="use_alarm_stream_summary">Play notification on Alarm stream (instead of Notification)</string>
    <string name="ringtone">Ringtone</string>
    <string name="add_empty_action_to_the_end_title">Append empty action</string>
    <string name="add_empty_action_to_the_end_summary">Append the empty-string action to the end of action list, use this if effect of the last action of the list extends to the whole width of notification</string>
    <string name="notifications_pure_hacks">Pure Hacks</string>
    <string name="regular_notification_settings">Main channel</string>
    <string name="quiet_hours_notification_settings">Quiet hours channel</string>
    <string name="alarm_notification_settings">Alarms channel</string>
    <string name="reminder_notification_settings">Reminders channel</string>
    <string name="alarm_reminder_notification_settings">Alarm reminders channel</string>
    <string name="main_notifications">Main notifications</string>
    <string name="reminder_notifications">Reminder notifications</string>
    <string name="other">Other…</string>
</resources>