<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/ringtone"
        android:key="_notifications_ringtone">

        <CheckBoxPreference
            android:key="use_alarm_stream_for_notification"
            android:title="@string/use_alarm_stream"
            android:summary="@string/use_alarm_stream_summary"
            android:defaultValue="false"
            />

        <com.github.quarck.calnotifyng.prefs.NotificationChannelActivityShortcutPreference
            android:key="dummy_key_1"
            android:title="@string/regular_notification_settings"
            android:defaultValue="com.github.calnotifyng.notify.v1.cal"
            />

        <com.github.quarck.calnotifyng.prefs.NotificationChannelActivityShortcutPreference
            android:key="dummy_key_1"
            android:title="@string/quiet_hours_notification_settings"
            android:defaultValue="com.github.calnotifyng.notify.v1.calquiet"
            />

        <com.github.quarck.calnotifyng.prefs.NotificationChannelActivityShortcutPreference
            android:key="dummy_key_1"
            android:title="@string/alarm_notification_settings"
            android:defaultValue="com.github.calnotifyng.notify.v1.calalrm"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications_pure_hacks"
        android:key="_notification_hacks"
        >
        <CheckBoxPreference
            android:key="add_empty_action_to_the_end"
            android:title="@string/add_empty_action_to_the_end_title"
            android:summary="@string/add_empty_action_to_the_end_summary"
            android:defaultValue="false"
            />
    </PreferenceCategory>

</PreferenceScreen>
