<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:title="@string/title_calendars_activity"
        android:summary="">
        <intent
            android:action="com.github.quarck.calnotifyng.prefs.CalendarsActivity"/>
    </header>

    <header
        android:fragment="com.github.quarck.calnotifyng.prefs.activities.NotificationSettingsActivity"
        android:title="@string/notification_settings"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotifyng.prefs.activities.SnoozeSettingsActivity"
        android:title="@string/snooze_presets"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotifyng.prefs.activities.ReminderSettingsFragment"
        android:title="@string/reminders_section"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotifyng.prefs.activities.QuietHoursSettingsActivity"
        android:title="@string/quiet_hours_section"
        android:summary="" />

    <header
        android:fragment="com.github.quarck.calnotifyng.prefs.activities.BehaviorSettingsActivity"
        android:title="@string/app_behavior"
        android:summary=""
        />

    <header
        android:fragment="com.github.quarck.calnotifyng.prefs.activities.MiscSettingsActivity"
        android:title="@string/misc_settings"
        android:summary="" />

</preference-headers>