<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <CheckBoxPreference
            android:key="enable_reminding_key"
            android:title="@string/enable_reminders"
            android:summary="@string/enable_reminders_summary"
            android:defaultValue="false"/>

        <com.github.quarck.calnotifyng.prefs.ReminderPatternPreference
            android:key="remind_interval_key_pattern"
            android:title="@string/remind_interval"
            android:defaultValue="10m"
            android:dependency="enable_reminding_key" />

        <com.github.quarck.calnotifyng.prefs.MaxRemindersPreference
            android:key="reminder_max_reminders"
            android:title="@string/max_reminders"
            android:summary="@string/max_reminders_summary"
            android:defaultValue="0"
            android:dependency="enable_reminding_key"
            />

        <com.github.quarck.calnotifyng.prefs.NotificationChannelActivityShortcutPreference
            android:key="dummy_key_1"
            android:title="@string/reminder_notification_settings"
            android:defaultValue="com.github.calnotifyng.notify.v1.rem"
            />

        <com.github.quarck.calnotifyng.prefs.NotificationChannelActivityShortcutPreference
            android:key="dummy_key_1"
            android:title="@string/alarm_reminder_notification_settings"
            android:defaultValue="com.github.calnotifyng.notify.v1.remalrm"
            />
</PreferenceScreen>
