<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.github.quarck.calnotifyng.prefs.activities.NotificationSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/accent"
            android:text="@string/main_notifications"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/notification_pref_main_channel_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="@string/regular_notification_settings"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:clickable="true"
            android:focusable="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/notification_pref_silent_channel_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="@string/quiet_hours_notification_settings"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:clickable="true"
            android:focusable="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/notification_pref_alarm_channel_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="@string/alarm_notification_settings"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:clickable="true"
            android:focusable="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/reminder_notifications"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/accent"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <Switch
            android:id="@+id/notification_pref_enable_reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_reminders"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text"
            android:text="@string/enable_reminders_summary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="0dp"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/notification_pref_reminder_layout">

        <TextView
            android:id="@+id/notification_pref_reminder_main_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="@string/reminder_notification_settings"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:clickable="true"
            android:focusable="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/notification_pref_reminder_alarm_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="@string/alarm_reminder_notification_settings"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:clickable="true"
            android:focusable="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/notification_pref_reminder_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="@string/remind_interval"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:clickable="true"
            android:focusable="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/notification_pref_reminder_max_reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="@string/max_reminders"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/notification_pref_reminder_max_reminders_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text"
            android:text="@string/max_reminders_summary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="0dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/accent"
            android:text="@string/other"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

        <Switch
            android:id="@+id/notification_pref_switch_empty_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_empty_action_to_the_end_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:onClick="onAppendEmptyActionSettings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text"
            android:text="@string/add_empty_action_to_the_end_summary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="0dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_light"
            android:padding="0dp"
            />

    </LinearLayout>


</ScrollView>