<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.github.quarck.calnotifyng.prefs.activities.SnoozeSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text"
        android:text="@string/snooze_presets_title"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onSnoozePresets"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/secondary_text"
        android:text="@string/snooze_presets_summary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="0dp"
        android:onClick="onSnoozePresets"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_light"
        android:padding="0dp"
        />


    <Switch
        android:id="@+id/snooze_pref_switch_view_after_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_after_edit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:onClick="onViewAfterEdit" />

    <TextView
        android:id="@+id/notification_pref_switch_alarm_volume_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/secondary_text"
        android:text="@string/view_after_edit_summary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="0dp"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_light"
        android:padding="0dp"
        />

    </LinearLayout>


</ScrollView>